--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,67 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+div pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+figure,
+header,
+nav,
+section,
+article,
+aside,
+footer,
+figcaption {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+}
+
 ul,
 li {
     padding: 0;
@@ -6,7 +70,12 @@ li {
 }
 
 header,
-nav {
+nav,
+section,
+article,
+aside,
+footer,
+hgroup {
     display: block;
 }
 
@@ -25,3 +94,133 @@ body {
 a {
     text-decoration: none !important;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #36454F;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-weight: 700;
+}
+
+ul {
+    margin-bottom: 0px;
+}
+
+/* global style */
+html,
+body {
+  font-family: 'Poppins', sans-serif;
+}
+.header-area {
+    position: relative;
+    background-color: #fff;
+    height: 100px;
+    z-index: 100;
+    -webkit-transition: all .5s ease 0s;
+    -moz-transition: all .5s ease 0s;
+    -o-transition: all .5s ease 0s;
+    transition: all .5s ease 0s;
+  }
+  
+  .header-area .main-nav {
+    background: transparent;
+    display: flex;
+  }
+  
+  .header-area .main-nav .logo {
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    display: inline-block;
+  }
+  
+  .header-area .main-nav .logo h1 {
+    line-height: 100px;
+    font-size: 28px;
+    text-transform: uppercase;
+    color: #36454F;
+    font-weight: 700;
+    letter-spacing: 2px;
+  }
+  .header-area .main-nav ul.nav {
+    flex-basis: 100%;
+    margin-top: 30px;
+    justify-content: right;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    position: relative;
+    z-index: 999;
+  }
+  
+  .header-area .main-nav .nav li:last-child {
+    padding-right: 0px;
+  }
+  
+  .header-area .main-nav .nav li {
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 100px;
+    line-height: 100px;
+  }
+  
+  .header-area .main-nav .nav li a {
+    display: block;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: 500;
+    font-size: 15px;
+    height: 40px;
+    line-height: 40px;
+    text-transform: capitalize;
+    color: #36454F;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
+    border: transparent;
+    letter-spacing: .25px;
+  }
+  
+  .header-area .main-nav .nav li:last-child a {
+    background-color: #36454F;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: none;
+    border-radius: 20px;
+    padding-left: 0px;
+  }
+  
+  .header-area .main-nav .nav li:last-child a i {
+    background-color: #003366;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    margin-right: 10px;
+    border-radius: 50%;
+    margin-left: -1px;
+  }
+  .header-area .main-nav .nav li a.active {
+    color: #003366;
+  }
+  .header-area .main-nav .menu-trigger {
+    cursor: pointer;
+    position: absolute;
+    top: 23px;
+    width: 32px;
+    height: 40px;
+    text-indent: -9999em;
+    z-index: 99;
+    right: 20px;
+    display: none;
+  }
