--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ Header Style
     letter-spacing: .25px;
 }
 
-.header-area .main-nav .nav li:last-child a {
+/* .header-area .main-nav .nav li:last-child a {
     background-color: #36454F;
     color: #fff;
     font-size: 14px;
@@ -396,7 +396,7 @@ Header Style
     margin-right: 10px;
     border-radius: 50%;
     margin-left: -1px;
-}
+} */
 
 .header-area .main-nav .nav li:last-child:hover a {
     background-color: #36454F;
@@ -1086,7 +1086,121 @@ Properties Style
   .properties .item .main-button {
     text-align: center;
   }
+/* 
+---------------------------------------------
+Page Header Style
+--------------------------------------------- 
+*/
+
+.page-heading {
+    background-image: url(../images/page-heading-bg.jpg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 110px 0px;
+    text-align: center;
+  }
   
+  .page-heading span {
+    background-color: #fff;
+    color: #36454F;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 10px 25px;
+    display: inline-block;
+    margin-bottom: 30px;
+  }
+  
+  .page-heading span a {
+    color: #36454F;
+  }
+  
+  .page-heading h3 {
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #fff;
+  }
+
+  /* 
+---------------------------------------------
+Properties Page  Style
+--------------------------------------------- 
+*/
+
+.properties ul.properties-filter {
+    list-style: none;
+    text-align: center;
+    margin-bottom: 70px;
+  }
+  
+  .properties ul.properties-filter li {
+    display: inline-block;
+    margin: 5px 8px;
+  }
+  
+  .properties ul.properties-filter li a {
+    display: inline-block;
+    text-align: center;
+    font-size: 15px;
+    text-transform: capitalize;
+    font-weight: 500;
+    color: #fff;
+    background-color: #36454F;
+    padding: 12px 25px;
+    border-radius: 5px;
+    transition: all .3s;
+  }
+  
+  .properties ul.properties-filter li a.is_active {
+    background-color: #003366;
+    ;
+    color: #fff;
+  }
+  
+  .properties ul.properties-filter li a.is_active:hover {
+    color: #fff;
+  }
+  
+  .properties ul.properties-filter li a:hover {
+    color: #003366;
+    ;
+  }
+  
+  .properties ul.pagination {
+    margin-top: 50px;
+    text-align: center;
+    width: 100%;
+    display: inline-block;
+  }
+  
+  .properties ul.pagination li {
+    display: inline-block;
+    margin: 0px 5px;
+  }
+  
+  .properties ul.pagination li a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background-color: #36454F;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 50%;
+    transition: all .3s;
+  }
+  
+  .properties ul.pagination li a:hover,
+  .properties ul.pagination li a.is_active {
+    background-color: #003366;
+    ;
+    color: #fff;
+  }
+    
 /* 
 ---------------------------------------------
 Responsive Style
@@ -1145,9 +1259,9 @@ body {
         padding-right: 3px;
     }
 
-    .header-area .main-nav .nav li:last-child a {
+    /* .header-area .main-nav .nav li:last-child a {
         padding-right: 15px;
-    }
+    } */
 
     .main-banner .item h2 {
         width: 100%;
