--- a/css/style.css
+++ b/css/style.css
@@ -131,45 +131,46 @@ html,
 body {
     font-family: 'Poppins', sans-serif;
 }
+
 ::selection {
     background: #0071f8;
     color: #fff;
-  }
-  
-  ::-moz-selection {
+}
+
+::-moz-selection {
     background: #0071f8;
     color: #fff;
-  }
-  
-  .section {
+}
+
+.section {
     margin-top: 120px;
-  }
-  
-  .section-heading {
+}
+
+.section-heading {
     margin-bottom: 70px;
-  }
-  
-  .section-heading h2 {
+}
+
+.section-heading h2 {
     font-size: 40px;
     font-weight: 700;
     text-transform: capitalize;
     margin-top: 20px;
     line-height: 56px;
-  }
-  
-  .section-heading h2 em {
+}
+
+.section-heading h2 em {
     font-style: normal;
     color: #0071f8;
-  }
-  
-  .section-heading h6 {
+}
+
+.section-heading h6 {
     color: #36454F;
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-  }
-  
-  .icon-button a {
+}
+
+.icon-button a {
     display: inline-block;
     background-color: #1e1e1e;
     color: #fff;
@@ -180,9 +181,9 @@ body {
     padding: 0px 30px 0px 0px;
     border-radius: 25px;
     transition: all .3s;
-  }
-  
-  .icon-button a i {
+}
+
+.icon-button a i {
     background-color: #003366;
     height: 50px;
     width: 50px;
@@ -192,17 +193,17 @@ body {
     display: inline-block;
     margin-right: 15px;
     margin-left: -1px;
-  }
-  
-  .icon-button a:hover {
+}
+
+.icon-button a:hover {
     color: #003366;
-  }
-  
-  .icon-button a:hover i {
+}
+
+.icon-button a:hover i {
     color: #fff;
-  }
-  
-  .main-button a {
+}
+
+.main-button a {
     display: inline-block;
     background-color: #1e1e1e;
     color: #fff;
@@ -213,12 +214,12 @@ body {
     padding: 0px 30px;
     border-radius: 25px;
     transition: all .3s;
-  }
-  
-  .main-button a:hover {
+}
+
+.main-button a:hover {
     background-color: #003366;
     color: #fff;
-  }
+}
 
 /* 
 ---------------------------------------------
@@ -1016,6 +1017,7 @@ footer p a {
 footer p a:hover {
     opacity: 0.75;
 }
+
 /* 
 ---------------------------------------------
 Properties Style
@@ -1027,13 +1029,13 @@ Properties Style
     border-radius: 10px;
     padding: 30px;
     margin-bottom: 30px;
-  }
-  
-  .properties .item img {
+}
+
+.properties .item img {
     border-radius: 10px;
-  }
-  
-  .properties .item span.category {
+}
+
+.properties .item span.category {
     background-color: #fbd9cf;
     font-weight: 500;
     border-radius: 5px;
@@ -1042,47 +1044,48 @@ Properties Style
     padding: 5px 12px;
     display: inline-block;
     margin-top: 25px;
-  }
-  
-  .properties .item h4 {
+}
+
+.properties .item h4 {
     font-size: 19px;
     margin: 25px 0px;
-  }
-  
-  .properties .item h4 a {
+}
+
+.properties .item h4 a {
     color: #1e1e1e;
-  }
-  
-  .properties .item ul li {
+}
+
+.properties .item ul li {
     display: inline-block;
     font-size: 15px;
     color: #4a4a4a;
     margin-right: 20px;
-  }
-  
-  .properties .item ul li span {
+}
+
+.properties .item ul li span {
     font-weight: 600;
     color: #1e1e1e;
-  }
-  
-  .properties .item ul {
+}
+
+.properties .item ul {
     border-bottom: 1px solid #eaeaea;
     margin-bottom: 30px;
     padding-bottom: 30px;
-  }
-  
-  .properties .item h6 {
+}
+
+.properties .item h6 {
     font-size: 20px;
     color: #003366;
     margin-top: 6px;
     display: inline-block;
     float: right;
     margin-top: 30px;
-  }
-  
-  .properties .item .main-button {
+}
+
+.properties .item .main-button {
     text-align: center;
-  }
+}
+
 /* 
 ---------------------------------------------
 Page Header Style
@@ -1096,9 +1099,9 @@ Page Header Style
     background-size: cover;
     padding: 110px 0px;
     text-align: center;
-  }
-  
-  .page-heading span {
+}
+
+.page-heading span {
     background-color: #fff;
     color: #36454F;
     font-size: 14px;
@@ -1107,20 +1110,20 @@ Page Header Style
     padding: 10px 25px;
     display: inline-block;
     margin-bottom: 30px;
-  }
-  
-  .page-heading span a {
+}
+
+.page-heading span a {
     color: #36454F;
-  }
-  
-  .page-heading h3 {
+}
+
+.page-heading h3 {
     font-size: 48px;
     font-weight: 900;
     text-transform: uppercase;
     color: #fff;
-  }
+}
 
-  /* 
+/* 
 ---------------------------------------------
 Properties Page  Style
 --------------------------------------------- 
@@ -1130,14 +1133,14 @@ Properties Page  Style
     list-style: none;
     text-align: center;
     margin-bottom: 70px;
-  }
-  
-  .properties ul.properties-filter li {
+}
+
+.properties ul.properties-filter li {
     display: inline-block;
     margin: 5px 8px;
-  }
-  
-  .properties ul.properties-filter li a {
+}
+
+.properties ul.properties-filter li a {
     display: inline-block;
     text-align: center;
     font-size: 15px;
@@ -1148,36 +1151,36 @@ Properties Page  Style
     padding: 12px 25px;
     border-radius: 5px;
     transition: all .3s;
-  }
-  
-  .properties ul.properties-filter li a.is_active {
+}
+
+.properties ul.properties-filter li a.is_active {
     background-color: #003366;
     ;
     color: #fff;
-  }
-  
-  .properties ul.properties-filter li a.is_active:hover {
+}
+
+.properties ul.properties-filter li a.is_active:hover {
     color: #fff;
-  }
-  
-  .properties ul.properties-filter li a:hover {
+}
+
+.properties ul.properties-filter li a:hover {
     color: #003366;
     ;
-  }
-  
-  .properties ul.pagination {
+}
+
+.properties ul.pagination {
     margin-top: 50px;
     text-align: center;
     width: 100%;
     display: inline-block;
-  }
-  
-  .properties ul.pagination li {
+}
+
+.properties ul.pagination li {
     display: inline-block;
     margin: 0px 5px;
-  }
-  
-  .properties ul.pagination li a {
+}
+
+.properties ul.pagination li a {
     display: inline-block;
     width: 40px;
     height: 40px;
@@ -1189,15 +1192,121 @@ Properties Page  Style
     font-weight: 600;
     border-radius: 50%;
     transition: all .3s;
-  }
-  
-  .properties ul.pagination li a:hover,
-  .properties ul.pagination li a.is_active {
+}
+
+.properties ul.pagination li a:hover,
+.properties ul.pagination li a.is_active {
     background-color: #003366;
     ;
     color: #fff;
-  }
-    
+}
+
+/* 
+---------------------------------------------
+Single Page Style
+--------------------------------------------- 
+*/
+
+.single-property .main-image img {
+    float: none;
+}
+
+.single-property .main-content h4 {
+    font-size: 25px;
+    margin-top: 25px;
+    margin-bottom: 40px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid #eee;
+}
+
+.single-property .main-content span.category {
+    background-color: #fbd9cf;
+    font-weight: 500;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #36454F;
+    padding: 5px 12px;
+    display: inline-block;
+    margin-top: 40px;
+}
+
+.single-property .accordion {
+    margin-top: 60px;
+    margin-left: 0px;
+    margin-right: 0px;
+    --bs-accordion-border-radius: 10px;
+    --bs-accordion-inner-border-radius: 10px;
+    --bs-accordion-bg: #fafafa;
+    --bs-accordion-border-color: none;
+    border: none !important;
+}
+
+.single-property .accordion-header {
+    border-bottom: 1px solid #eaeaea;
+}
+
+.single-property .accordion-button {
+    box-shadow: none;
+    font-size: 17px;
+    font-weight: 500;
+    color: #36454F;
+}
+
+.single-property .accordion-button:not(.collapsed) {
+    color: #003366;
+    ;
+    background-color: #fafafa;
+    outline: none;
+}
+
+.single-property .accordion-button::after {
+    display: none;
+}
+
+.single-property #headingThree {
+    border-bottom: none;
+}
+
+.single-property .accordion-item:last-of-type .accordion-collapse {
+    border-top: 1px solid #eaeaea;
+}
+
+.single-property .info-table {
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+    padding: 35px 30px;
+    margin-left: 60px;
+}
+
+.single-property .info-table ul li {
+    display: block;
+    margin-bottom: 35px;
+    padding-bottom: 35px;
+    border-bottom: 1px solid #eee;
+}
+
+.single-property .info-table ul li:last-child {
+    border-bottom: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+.single-property .info-table ul li img {
+    float: left;
+    margin-right: 25px;
+}
+
+.single-property .info-table ul li h4 {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.single-property .info-table ul li h4 span {
+    font-size: 15px;
+    color: #aaa;
+    font-weight: 400;
+}
+
 /* 
 ---------------------------------------------
 Responsive Style
